Ceļā uz kontu pieteikumju kā sugas depecēšanu. ----------------------------------------------
Kontu verifikācijas kritēriji un to saņemšanas API galapunkti pārrakstīti, lai pieņemtu models.Account un nevis models.AccountApplication.

Kontu verificēšana ir pārrakstīta, lai tā arī pievienotu kontu komandai, ja nepieciešams.

Nedaudz refaktorēti API galapunktu nosaukumi (vēl pietrūkst atjaunināt implementāciju dažiem).

"openapi.yaml" v2 (tiek cepta trešā versija)
